# NetEaseMusicMeta

./: .gitignore  .gitmodules  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  README.md  index.ts  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug.yml  feat.yml
.github/workflows/: code_review.yml  codeql.yml  greetings.yml  issue_geetings.yml  issue_similarity.yml  release.yml
.marscode/: deviceInfo.json
Cpp/: CMakeLists.txt  cover.cpp  fetch.cpp  info.cpp  info.h  lrc.cpp  lrc.h  main.cpp  meta_match.cpp  metadata.cpp  metadata.h  test.lrc
Cpp/info/: getDetail.ts  search.ts
Cpp/lrc/: ptLrc.ts
models/netease/: comments.d.ts  comments.ts  detail.d.ts  detail.ts  index.ts  lyric.d.ts  lyric.ts  player.d.ts  player.ts  search.d.ts  search.ts  sign.js
types/: Detail.d.ts
utils/: index.ts  jsonToUrlEncoded.ts
utils/ffmpeg/: index.ts  readMetadata.ts  writeMetadata.ts
